--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KUtils</string>
+
+    <string name="net_work_error">您的网络好像出了点问题</string>
+    <string name="service_error">跟服务器的连接貌似出了点问题\n请稍后重试</string>
 </resources>
